--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,12 +41,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.69.0",
     "react-resizable-panels": "^4.0.15",
     "recharts": "^3.6.0",
     "sonner": "^2.0.7",
